testdata/zkc/invalid/constant_invalid_01.zkc
//error:2:18-21:expected u8 (found u9+)
const LARGE:u8 = 256
